bk_ida/gccida/c3/grokdeclarator
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4516:56: error: must use 'enum' tag to refer to type 'decl_context'
tree  grokdeclarator( tree declarator, tree declspecs, decl_context decl_context, int initialized) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4529:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4564:1: error: must use 'enum' tag to refer to type 'rid'
rid i; // [rsp+104h] [rbp-BCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4573:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code innermost_code; // [rsp+140h] [rbp-80h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4591:1: error: must use 'enum' tag to refer to type 'decl_context'
decl_context decl_contexta; // [rsp+1A4h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4516:69: note: enum 'decl_context' is hidden by a non-type declaration of 'decl_context' here
tree  grokdeclarator( tree declarator, tree declspecs, decl_context decl_context, int initialized) 
                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4758:7: error: use of undeclared identifier 'grokdeclarator_already'
if ( !grokdeclarator_already && !pedantic ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/c-decl.c:4761:1: error: use of undeclared identifier 'grokdeclarator_already'
grokdeclarator_already = 1; 
^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/grokdeclarator/src/obj/c-decl.o] Error 1
